[viz] Release frame resources on frame rejection

If a frame is rejected for any reason, the resources for the rejected
frame still need to be released.

To enforce this, a ScopedClosureRunner is created by the frame sink, and
passed to the surface. The surface will reset the closure so the
callback is called once it has passed some sanity checks.

All existing (but inconsistently performed) cleanup code has been
unified in the new callback.

Bug: 844800
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Id07c89ac39c850d1e3603b0a6beee1787489181a
Reviewed-on: https://chromium-review.googlesource.com/1070714
Commit-Queue: Lloyd Pique <lpique@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566134}
Former-commit-id: 8e2f3d3f4cc694638a9ee012759689db59e8fbf0